@@ -31,6 +31,7 @@ $ -> Language fix or change
  ^ Updated SimplePie to version 1.1.3.
  - Removed sections search plugin.
  ^ Replaced emailcloak content plugin with its refactored version.
+ ^ Replaced pagebreak content plugin with its refactored version.
 
 26-Jun-2009 Gergo Erdosi
  ^ Replaced com_login with its refactored version.
